# GridDyn

./: .clang-format  .clang-tidy  .cmake-format.json  .codacy.yml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CPPLINT.cfg  Doxyfile.in  LICENSE  NOTICE  README.llnl  README.md  appveyor.yml  config.h.in  extra_compile_flags.txt  griddyn-config.h.in  installation.md  meson.build  meson_options.txt  quickStart.md
config/installer/: .gitignore  CMakeLists.txt  GridDyn_NSIS_Format_Test.nsi  README.md
core/: CMakeLists.txt  coreDefinitions.h  coreExceptions.cpp  coreExceptions.h  coreObject.cpp  coreObject.h  coreObjectList.cpp  coreObjectList.h  coreObjectTemplates.h  coreVectorTypes.h  factoryTemplates.h  griddyn-tracer.h  helperObject.cpp  helperObject.h  helperTemplates.h  nullObject.cpp  nullObject.h  objectFactory.cpp  objectFactory.h  objectFactoryTemplates.h  objectInterpreter.cpp  objectInterpreter.h  objectOperatorInterface.h  propertyBuffer.cpp  propertyBuffer.h
coupling/: CMakeLists.txt  GhostSwingBusManager.cpp  GhostSwingBusManager.h  GhostSwingBusMessageTypes.h
extraModels/: CMakeLists.txt  extraModels.cpp  extraModels.h  txLifeSpan.cpp  txLifeSpan.h  txThermalModel.cpp  txThermalModel.h
fmi/: CMakeLists.txt  fmiExciter.cpp  fmiExciter.h  fmiGDinfo.cpp  fmiGDinfo.h  fmiLoad.cpp  fmiLoad.h  fmiSubModel.cpp  fmiSubModel.h  fmiSubModel2.cpp  fmi_import1.cpp  fmi_import2.cpp  fmi_importGD.h
fmi/fmi_import/: fmi2CoSim.cpp  fmi2CoSimObject.cpp  fmi2ME.cpp  fmi2ModelExchangeObject.cpp  fmi2Object.cpp  fmiEnumDefinitions.cpp  fmiEnumDefinitions.h  fmiImport.cpp  fmiImport.h  fmiInfo.cpp  fmiInfo.h  fmiLibraryManager.cpp  (+3 more)
fmi_export/: CMakeLists.txt  IEEE14FMU.xml  fmiCollector.cpp  fmiCollector.h  fmiCoordinator.cpp  fmiCoordinator.h  fmiEvent.cpp  fmiEvent.h  fmiGridDynExport.cpp  fmiRunner.cpp  fmiRunner.h  fmuBuilder.cpp  fmuBuilder.h  loadFMIExportObjects.cpp  loadFMIExportObjects.h  simpleModelDescription.xml  testFMIExport.cpp
fncs/: CMakeLists.txt  fncsCollector.cpp  fncsCollector.h  fncsGhostBus.cpp  fncsGhostBus.h  fncsLibrary.cpp  fncsLibrary.h  fncsLoad.cpp  fncsLoad.h  fncsSource.cpp  fncsSource.h  fncsSupport.cpp  fncsSupport.h  gridDynFNCS.cpp  gridDynMain.cpp
formatInterpreters/: CMakeLists.txt  jsonElement.cpp  jsonElement.h  jsonReaderElement.cpp  jsonReaderElement.h  log.h  readerElement.cpp  readerElement.h  tinyxml2ReaderElement.cpp  tinyxml2ReaderElement.h  tinyxmlReaderElement.cpp  tinyxmlReaderElement.h  yamlElement.cpp  yamlElement.h  yamlReaderElement.cpp  yamlReaderElement.h
fskit/: CMakeLists.txt  GridDynFskitRunner.cpp  GridDynFskitRunner.h  fskitCommunicator.cpp  gridDynFederatedScheduler.h  gridDynfskit.cpp  protection-message.cc  protection-message.h
gridDyn/: CMakeLists.txt  allGridDynObjects.h  basicDefs.h  gridArea.h  gridBus.h  gridCore.cpp  gridCore.h  gridCoreList.cpp  gridCoreList.h  gridCoreTemplates.h  gridDyn.h  gridDynDefinitions.h  gridDynFederatedScheduler.cpp  gridDynFederatedScheduler.h  gridDynTypes.h  gridDynVectorTypes.h  gridDyn_time.h  gridObjects.cpp  gridObjects.h  gridObjectsHelperClasses.cpp  gridObjectsHelperClasses.h  gridPrimary.cpp  gridSecondary.cpp  gridSubModel.cpp  numericEstimationFunctions.cpp  numericEstimationFunctions.h  objectFactory.cpp  objectFactory.h  objectFactoryTemplates.h  parameterOperator.hpp  solverMode.h
gridDynFileInput/: CMakeLists.txt  elementReaderTemplates.hpp  gridDynFileInput.cpp  gridDynFileInput.h  gridDynReadCDF.cpp  gridDynReadCSV.cpp  gridDynReadDYR.cpp  gridDynReadPSP.cpp  gridDynReadPTI.cpp  gridDynReadRAW.cpp  gridDynRunner.cpp  gridDynRunner.h  gridParameter.cpp  gridParameter.h  gridReadEPC.cpp  gridReadMatPower.cpp  gridReadPSAT.cpp  jsonReaderElement.cpp  loadGDZ.cpp  loadSubObjectsElement.cpp  objectLoadFromElementHelperFunctions.cpp  objectLoadHelperFunctions.cpp  readAreaElement.cpp  readArrayElement.cpp  readBusElement.cpp  readCollectorElement.cpp  readConditionElement.cpp  readEconElement.cpp  readElement.h  readElementFile.cpp  readElementFile.h  readElementHelperFunctions.cpp  readEventElement.cpp  readLibraryElement.cpp  readLinkElement.cpp  readMatDyn.cpp  readMatlabData.cpp  readRecorderElement.cpp  readRelayElement.cpp  readSimulationElement.cpp  (+13 more)
gridDynMain/: CMakeLists.txt  gridDynMain.cpp
gridDynOpt/: CMakeLists.txt  gridDynOpt.cpp  gridDynOpt.h  gridOptObjects.cpp  gridOptObjects.h  optHelperClasses.cpp  optHelperClasses.h  optObjectFactory.cpp  optObjectFactory.h  optimizerInterface.cpp  optimizerInterface.h
griddyn/: meson.build
headers/: meson.build
interfaces/: CMakeLists.txt  griddyn.i  griddyn.py  swig_compile.sh  test.py
src/: CMakeLists.txt
test/: .clang-tidy  CMakeLists.txt  exeTestHelper.cpp  exeTestHelper.h  meson.build  testHelper.h  testHelperFunctions.cpp  testgridDyn.h
utilities/: CMakeLists.txt  arrayData.h  arrayDataBoost.h  arrayDataCompact.h  arrayDataScale.h  arrayDataSparse.cpp  arrayDataSparse.h  arrayDataSparseSM.cpp  arrayDataSparseSM.h  arrayDataTranslate.h  base64.cpp  base64.h  charMapper.cpp  charMapper.h  charMappers.h  dataDictionary.h  fileReaders.cpp  fileReaders.h  functionInterpreter.cpp  functionInterpreter.h  generic_string_ops.hpp  gridRandom.cpp  gridRandom.h  mapOps.h  matrixCreation.cpp  matrixCreation.h  matrixData.h  matrixDataBoost.h  matrixDataCompact.h  matrixDataContainer.h  matrixDataFilter.h  matrixDataOrdered.h  matrixDataOrdering.h  matrixDataScale.h  matrixDataSparse.cpp  matrixDataSparse.h  matrixDataSparseSM.h  matrixDataTranslate.h  matrixOps.cpp  matrixOps.h  (+30 more)
zmqInterface/: CMakeLists.txt  dimeClientInterface.cpp  dimeClientInterface.h  dimeCollector.cpp  dimeCollector.h  dimeCommunicator.cpp  dimeCommunicator.h  zmqCommunicator.cpp  zmqCommunicator.h  zmqContextManager.cpp  zmqContextManager.h  zmqHelper.cpp  zmqHelper.h  zmqInterface.cpp  zmqInterface.h  zmqProxyHub.cpp  zmqProxyHub.h  zmqReactor.cpp  zmqReactor.h  zmqSocketDescriptor.cpp  zmqSocketDescriptor.h
(+2190 files in other folders)
